# plotine

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_LICENSES.md  deny.toml  llms-full.txt  llms.txt  rust-toolchain.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml
book/: book.toml
book/src/: SUMMARY.md  agents.md  api-stability.md  charts.md  errors.md  features.md  introduction.md  math-labels.md  quickstart.md  releasing.md  scales.md  subplots.md  themes.md
book/src/tutorials/: export-formats.md  interactive.md  migrate-from-matplotlib.md
compare/: README.md  mpl_stream_ref.npz
crates/plotine/: Cargo.toml
crates/plotine-backend-pdf/: Cargo.toml
crates/plotine-backend-pdf/src/: lib.rs
crates/plotine-backend-pgf/: Cargo.toml
crates/plotine-backend-pgf/src/: lib.rs
crates/plotine-backend-skia/: Cargo.toml
crates/plotine-backend-skia/src/: lib.rs
crates/plotine-backend-svg/: Cargo.toml
crates/plotine-backend-svg/src/: lib.rs
crates/plotine-core/: Cargo.toml
crates/plotine-core/src/: color.rs  colormap.rs  datetime.rs  error.rs  geom.rs  lib.rs  scale.rs  ticks.rs  transform.rs
crates/plotine-pyplot/: Cargo.toml  README.md
crates/plotine-pyplot/examples/: migrate_pyplot.rs  pyplot_size_benchmark.rs
crates/plotine-pyplot/src/: lib.rs  state.rs
crates/plotine-render/: Cargo.toml
crates/plotine-render/src/: lib.rs  primitives.rs  renderer.rs
crates/plotine-text/: Cargo.toml
crates/plotine-text/fonts/: README.md
crates/plotine-text/src/: engine.rs  fonts.rs  lib.rs
crates/plotine/benches/: hotspots.rs
crates/plotine/examples/: animate_wave.rs  bar_hist_area.rs  bench_suite.rs  boxplot_demo.rs  cjk_labels.rs  classic_functions.rs  datetime_axis.rs  empty_axes.rs  errorbar_legend.rs  evcxr_usage.rs  export_formats.rs  gallery.rs  heatmap_demo.rs  interactive_show.rs  interactive_widgets.rs  line_sine.rs  log_and_themes.rs  matplotlib_compare.rs  ndarray_demo.rs  polars_line.rs  refresh_3d_compare.rs  scatter_demo.rs  size_benchmark.rs  subplots_demo.rs  usetex_demo.rs  violin_demo.rs
crates/plotine/src/: animation.rs  artist.rs  axes.rs  axes3d.rs  draw.rs  draw3d.rs  ext_tools.rs  figure.rs  fonts.rs  layout.rs  legend.rs  lib.rs  math.rs  mpl_policy.rs  nav.rs  polars_support.rs  prelude.rs  projection.rs  secondary.rs  series.rs  stats.rs  style.rs  subplots.rs  theme.rs  tick_format.rs  view.rs
crates/plotine/src/geo/: coastline.rs  geojson.rs  mod.rs
crates/plotine/src/gui/: app.rs  mod.rs
crates/plotine/src/latex/: mod.rs
crates/plotine/src/mathtext/: layout.rs  mod.rs  parse.rs
crates/plotine/src/recipes/: annotate.rs  area.rs  bar.rs  barbs.rs  barh.rs  boxplot.rs  broken_barh.rs  contour.rs  errorbar.rs  eventplot.rs  fill_between.rs  heatmap.rs  hexbin.rs  hist.rs  hist2d.rs  line.rs  mod.rs  patches.rs  pcolormesh.rs  pie.rs  polar.rs  polygon.rs  quiver.rs  scatter.rs  spans.rs  spy.rs  stackplot.rs  stem.rs  step.rs  streamplot.rs  table.rs  tri.rs  violin.rs
crates/plotine/tests/: cjk_fonts.rs  empty_axes_render.rs  line_scatter.rs  m11_geo.rs  m13_latex.rs  m14_formats.rs  m16_eco.rs  m18_must.rs  m1_charts.rs  m2_scales_svg.rs  m2_subplots_datetime.rs  m3_heatmap_boxplot.rs  m3_polars_ndarray.rs  m3_violin_evcxr.rs  m8_inset_axes.rs  m8_secondary_axis.rs  m8_subplot_span.rs  m8_table_mathtext.rs  m8_tri.rs  m9_m17_maturity.rs  visual_snapshots.rs
crates/plotine/tests/snapshots/: visual_snapshots__annotate.snap  visual_snapshots__area.snap  visual_snapshots__bar_svg.snap  visual_snapshots__barbs.snap  visual_snapshots__barh_spans.snap  visual_snapshots__bars.snap  visual_snapshots__boxplot.snap  visual_snapshots__categories.snap  visual_snapshots__clabel.snap  visual_snapshots__contour.snap  visual_snapshots__datetime_axis.snap  visual_snapshots__empty_axes.snap  visual_snapshots__errorbar.snap  visual_snapshots__eventplot.snap  visual_snapshots__fill_between.snap  visual_snapshots__heatmap.snap  visual_snapshots__heatmap_svg.snap  visual_snapshots__helix_3d.snap  visual_snapshots__hexbin.snap  visual_snapshots__hist.snap  visual_snapshots__hist2d.snap  visual_snapshots__line_svg.snap  visual_snapshots__loglog.snap  visual_snapshots__lognorm.snap  visual_snapshots__math_labels.snap  visual_snapshots__pie.snap  visual_snapshots__polar.snap  visual_snapshots__polygon_spans.snap  visual_snapshots__quiver.snap  visual_snapshots__scatter.snap  visual_snapshots__sine_line.snap  visual_snapshots__spy.snap  visual_snapshots__stackplot.snap  visual_snapshots__stem.snap  visual_snapshots__step.snap  visual_snapshots__streamplot.snap  visual_snapshots__subplots_2x2.snap  visual_snapshots__surface_3d.snap  visual_snapshots__theme_dark.snap  visual_snapshots__theme_paper.snap  (+3 more)
docs/: API_FREEZE.md  BENCHMARK.md  DEVELOPMENT_PLAN.md  GUI_TOOLBAR.md  MPL_2D_COVERAGE.md  MPL_GAP.md  RELEASING.md
scripts/: benchmark.py  build_coastline.py  mae_full_scan.py  matplotlib_compare.py  mpl_3d_interactive.py  mse_3d.py  pixel_align_features.py  plotine_3d_interactive.py  publish.ps1  requirements-dev.txt  size_benchmark.py  write_review_dashboard.py
