[package]
name = "plotine-backend-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/plotine-backend-pdf"
authors.workspace = true
description = "Vector PDF backend for plotine (SVG pipeline + svg2pdf)"
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
plotine-core = { workspace = true }
plotine-render = { workspace = true }
plotine-text = { workspace = true }
plotine-backend-svg = { workspace = true }
kurbo = { workspace = true }
svg2pdf = { workspace = true }
