[package]
name = "plotine-backend-pgf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/plotine-backend-pgf"
authors.workspace = true
description = "PGF/TikZ backend for plotine (LaTeX-friendly vector export)"
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
plotine-core = { workspace = true }
plotine-render = { workspace = true }
plotine-text = { workspace = true }
kurbo = { workspace = true }
png = { workspace = true }
base64 = { workspace = true }
