[package]
name = "plotine-backend-skia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/plotine-backend-skia"
authors.workspace = true
description = "tiny-skia PNG backend for plotine"
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
plotine-core = { workspace = true }
plotine-render = { workspace = true }
plotine-text = { workspace = true }
kurbo = { workspace = true }
tiny-skia = { workspace = true }
png = { workspace = true }
