[package]
name = "plotine-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/plotine-render"
authors.workspace = true
description = "Backend-agnostic rendering traits and scene primitives for plotine"
readme = "../../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
plotine-core = { workspace = true }
kurbo = { workspace = true }
